fix(ui): VContentSwitcher item height stretch

--- a/packages/ui/src/kit/VContentSwitcher/VContentSwitcher.theme-default.scss
+++ b/packages/ui/src/kit/VContentSwitcher/VContentSwitcher.theme-default.scss
@@ -7,7 +7,7 @@
 
 .v-content-switcher.theme-default .v-content-switcher-item {
   position: relative;
-  height: 100%;
+  display: flex;
 }
 
 .v-content-switcher.theme-default .v-content-switcher-item:not(:first-child):before {
@@ -47,7 +47,6 @@
 
 .v-content-switcher.theme-default .v-content-switcher-label {
   display: flex;
-  height: 100%;
   align-items: center;
   font-size: 14px;
   line-height: 16px;
